--- a/_quarto.yml
+++ b/_quarto.yml
@@ -10,10 +10,10 @@ website:
   open-graph: true
 
   page-footer: 
-    center: "This page is built with ❤️ and [Quarto](https://quarto.org/).<br/>&copy; Copyright 2025, Steven Golovkine"
+    center: "2025 | <strong>Steven Golovkine</strong> | <a class='link-footer' href='https://creativecommons.org/licenses/by-nc-sa/4.0/'>CC BY-NC-SA 4.0</a>"
 
   sidebar: 
-    logo: "./include/logo.svg"
+    logo: "./include/logo.png"
     pinned: true
     align: center
     toc-location: right
@@ -39,6 +39,7 @@ format:
     code-overflow: wrap 
     toc: true
     smooth-scroll: true
+    link-external-newwindow: true
     include-after-body: include/webex.js
 
 freeze: auto
