--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,7 +1,65 @@
 project:
   type: website
+  output-dir: ./_site
 
-profile: 
-  default: french
-  group: [french, english]
+babelquarto:
+  languagecodes:
+  - name: en
+    text: "Version in en"
+  - name: fr
+    text: "Version in fr"
+  mainlanguage: 'fr'
+  languages: ['en']
+  languagelinks: sidebar
+title-en: title in en
+description-en: description in en
+author-en: author in en
+lang: fr
 
+
+website:
+  title: "STT-2200: Analyse de données"
+  page-navigation: true
+  site-url: https://stt2200.netlify.app
+  repo-url: https://github.com/StevenGolovkine/UL-STT2200
+  repo-actions: [issue, source]
+  open-graph: true
+
+  page-footer: 
+    center: "2025 | <strong>Steven Golovkine</strong> | <a class='link-footer' href='https://creativecommons.org/licenses/by-nc-sa/4.0/'>CC BY-NC-SA 4.0</a>"
+
+  sidebar: 
+    logo: "./include/logo.png"
+    pinned: true
+    align: center
+    toc-location: right
+    search: true
+    collapse-level: 1
+    tools: 
+      - icon: github
+        href: https://github.com/StevenGolovkine/UL-STT2200
+        text: "Github organization"
+      - icon: translate
+        href: ../en
+        text: English
+    contents:
+      - href: index.qmd
+        text: Home
+      - about.qmd
+
+bibliography: ./include/biblio.bib
+
+format:
+  html:
+    theme:
+      light: ./include/ulaval.scss
+      dark: ./include/ulaval-dark.scss
+    code-copy: true
+    code-overflow: wrap 
+    toc: true
+    smooth-scroll: true
+    link-external-newwindow: true
+    include-after-body: include/webex.js
+
+freeze: auto
+editor: visual
