--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,21 +1,42 @@
-on: 
+on:
   workflow_dispatch:
   push:
     branches: [main]
 
 name: Quarto publish
+permissions: write-all
 
 jobs:
-  build-deploy:
+  render:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
 
+      - name: Install R 
+        uses: r-lib/actions/setup-r@v2
+
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
 
-      - name: Render and publish
+      - name: Set up R dependencies
+        uses: r-lib/actions/setup-r-dependencies@v2
+        with: 
+          packages: |
+            github::ropensci-review-tools/babelquarto@a485fea
+
+      - name: Render website with babelquarto
+        run: Rscript -e 'babelquarto::render_website()'
+
+      - name: Archive webiste render 
+        uses: actions/upload-artifact@v4
+        with: 
+          name: website_render
+          path: _site/
+
+      - name: Publish
         uses: quarto-dev/quarto-actions/publish@v2
         with: 
           target: netlify
