--- a/_quarto.yml
+++ b/_quarto.yml
@@ -60,6 +60,12 @@ website:
             text: 01 - Introduction 
           - href: contents/02-revisions.qmd 
             text: 02 - Révisions 
+          - href: contents/03-spaces.qmd
+            text: 03 - Espace 
+          - href: contents/04-distance.qmd 
+            text: 04 - Distance 
+          - href: contents/05-bias-variance.qmd 
+            text: 05 - Biais/Variance
 
 bibliography: ./include/biblio.bib
 
